--- a/Basic-Knowledge/Basic-of-Software/Data-structure/各种类型的数据结构.md
+++ b/Basic-Knowledge/Basic-of-Software/Data-structure/各种类型的数据结构.md
@@ -1,14 +1,32 @@
-## 堆
+## 队列  Queue
 
 
-## 栈
+## 树  Tree
 
 
-## 队列
+## 堆  heap
 
 
-## 二叉树
+## 数组 Array
 
 
 
-## 
+## 栈  Stack
+
+
+
+## 链表 Linked List
+
+
+
+## 图  Graph
+
+
+
+## 散列表  Hash
+
+
+
+
+
+
