--- a/Basic-Knowledge/Basic-of-Software/Data-structure/各种类型的数据结构.md
+++ b/Basic-Knowledge/Basic-of-Software/Data-structure/各种类型的数据结构.md
@@ -1,29 +1,55 @@
+
+## 散列表  Hash
+* 见java集合
+
+## 数组 Array
+* 见java集合
+
+## 链表 Linked List
+* 见java集合
+
+
 ## 队列  Queue
+* 先进后出的数据结构 即栈的数据结构
+
+* 先进先出的数据结构 类似线程池的线性结构
+
 
 
 ## 树  Tree
+* 二叉树
+
+> * 一个根节点开始为root
+
+> * 再次插入数据的时候，比根节点小放左边，大就放右边
+
+> * 任一一个节点只能有一个父节点，子节点
+
+> * 从root开始，深度为1，多经历一个子节点，深度+1
+
+### 二叉树的相关概念
+| 名称| 意义|
+|---  |---  |
+|完全二叉树|最下一层的每个数据的父节点，起码左边有数据|
+
+
+* 二叉查找树
+
+* [红黑树详解](http://www.cnblogs.com/fanzhidongyzby/p/3187912.html)
+* [一图一代码 让你彻底明白红黑树 ](http://blog.csdn.net/chenhuajie123/article/details/11951777)
 
 
 ## 堆  heap
 
 
-## 数组 Array
-
-
 
 ## 栈  Stack
-
-
-
-## 链表 Linked List
+* 先进后出的线性数据结构
 
 
 
 ## 图  Graph
 
-
-
-## 散列表  Hash
 
 
 
