modified singleton pattern

--- a/md_file/博客文章/开发理论/设计模式/创建型设计模式/创建型_单例模式..md
+++ b/md_file/博客文章/开发理论/设计模式/创建型设计模式/创建型_单例模式..md
@@ -5,7 +5,7 @@ public class SingleTon(){
 
   public SingleTon(){}
 
-  public staic SingleTon getInstance(){
+  public static SingleTon getInstance(){
     if(Instance == null){
       Instance = new SingleTon();
     }
@@ -110,9 +110,8 @@ public class SingleTon{
     }
 
   }
-​```
 
-​```
+    
   //懒汉式(线程安全)
   public class SingleTon{
     private static SingleTon Instance;
@@ -157,7 +156,7 @@ public class SingleTon{
   public class SingleTon{
     private SingleTon(){}
 
-    private staic class SingleTonInstance(){
+    private static class SingleTonInstance(){
       private static final SingleTon Instance = new SingleTon();
     }
 
@@ -166,7 +165,7 @@ public class SingleTon{
     }
 
   }
-​```
+
 
 }
 ```
