--- a/md_file/博客文章/开发理论/设计模式/创建型设计模式/创建型_建造者模式.md
+++ b/md_file/博客文章/开发理论/设计模式/创建型设计模式/创建型_建造者模式.md
@@ -1,2 +1,133 @@
 ## 创建型—建造者模式
 
+##### 定义
+
+* 建造者模式（Builder Pattern）使用多个简单的对象一步一步构建成一个复杂的对象。 这种类型的设计模式属于创建型模式，它提供了一种创建对象的最佳方式。
+* 一个 Builder 类会一步一步构造最终的对象。 该 Builder 类是独立于其他对象的。
+* 主要解决在软件系统中，有时候面临着"一个复杂对象"的创建工作，其通常由各个部分的子对象用一定的算法构成； 由于需求的变化，这个复杂对象的各个部分经常面临着剧烈的变化，但是将它们组合在一起的算法却相对稳定。
+
+
+
+---
+
+#### 示例代码
+
+```java
+package designpattern.builder_p;
+
+/**
+ * Created By Andrew Duan
+ * Date:2019/9/19
+ * e-mail:thinfog@126.com
+ */
+public class Something {
+    //builder模式
+    private String partA;
+    private String partB;
+    private String partC;
+    private String partD;
+
+    public String getPartA() {
+        return partA;
+    }
+
+    public Something setPartA(String partA) {
+        this.partA = partA;
+        return this;
+    }
+
+    public String getPartB() {
+        return partB;
+    }
+
+    public Something setPartB(String partB) {
+        this.partB = partB;
+        return this;
+    }
+
+    public String getPartC() {
+        return partC;
+    }
+
+    public Something setPartC(String partC) {
+        this.partC = partC;
+        return this;
+    }
+
+    public String getPartD() {
+        return partD;
+    }
+
+    public Something setPartD(String partD) {
+        this.partD = partD;
+        return this;
+    }
+    
+    @Override
+    public String toString() {
+        return "partA="+partA + "   partB="+partB + "   partC="+partC + "   partD="+partD ;
+    }
+
+    public static class SomethingBuilder {
+
+        private Something something;
+
+        public SomethingBuilder() {
+            this.something = new Something();
+        }
+
+        public SomethingBuilder partA(String partA) {
+            this.something.setPartA(partA);
+            return this;
+        }
+
+        public SomethingBuilder partB(String partB) {
+            this.something.setPartB(partB);
+            return this;
+        }
+
+        public SomethingBuilder partC(String partC) {
+            this.something.setPartC(partC);
+            return this;
+        }
+
+        public SomethingBuilder partD(String partD) {
+            this.something.setPartD(partD);
+            return this;
+        }
+
+        public Something build(){
+            return this.something;
+        }
+
+    }
+
+}
+
+```
+
+
+
+测试代码
+
+```java
+ 	@Test
+    public void test1( ) {
+        Something something = new Something.SomethingBuilder()
+                .partA("AAAA")
+                .partB("BBB")
+                .partC("CCC")
+                .partD("DDD")
+                .build();
+        System.out.println(something.toString());
+
+
+    }
+```
+
+
+
+#### 分析总结
+
+* 这是仿写的retrofit的建造者模式，每一个部分可以完整一个复杂类的部件装配工作或使用默认的部件。使用这样的方法可以
+
