--- a/md_file/博客文章/开发理论/设计模式/行为型设计模式/行为型_观察者模式.md
+++ b/md_file/博客文章/开发理论/设计模式/行为型设计模式/行为型_观察者模式.md
@@ -1,3 +1,13 @@
+## 行为型—观察者模式
+
+#### 定义
+
+* 定义对象之间的一种一对多的依赖关系，使得每当一个对象的状态发生改变的时候，其相关依赖对象皆得到通知并被自动更新。
+* 
+
+
+
+
 ```java
 // 观察者模式就是设置一个通知所有被观察者的对象，对所有需要知情的对象集中管理
 // 这种通知的方式，可以实现对某个特定情况的集中管理
@@ -10,15 +20,12 @@ class Observer{
   public static void main(String arg){
     Observer observer = new Observer();
     for(int i=0;i<10;i++){
-      observer.add(new Observered());
+      observer.addUser(new Observered());
     }
-    
 
-​```
-if("条件满足" != null){
-  observer.notifyAll();
-}
-​```
+    if("条件满足" != null){
+      observer.notifyAll();
+    }
 
   }
 
