--- a/md_file/博客文章/后端部分/数据库/C3P0数据连接池的配置.md
+++ b/md_file/博客文章/后端部分/数据库/C3P0数据连接池的配置.md
@@ -84,3 +84,88 @@ password:和数据库用户名对应的数据库密码
 | factoryClassLocation | 0      | 指定c3p0 libraries的路径，如果（通常都是这样）在本地即可获得那么无需设置，默认null即可 |
 | numHelperThreads     | 3      | c3p0是异步操作的，缓慢的JDBC操作通过帮助进程完成。扩展这些操作可以有效的提升性能通过多线程实现多个操作同时被执行 |
 
+
+
+##### 统一配置文件内容
+
+```properties
+1.C3p0属性文件配置详解
+
+#jdbc基本信息
+driverClass=com.mysql.jdbc.Driver
+jdbcUrl=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF8
+
+#MYSQL用户名
+user=root
+
+#MYSQL密码
+password=root
+
+# c3p0连接池中保留的最小连接数
+c3p0.minPoolSize=3
+
+# 连接池中保留的最大连接数。Default: 15
+c3p0.maxPoolSize=25
+
+# 初始化时获取三个连接，取值应在minPoolSize与maxPoolSize之间。Default: 3
+c3p0.initialPoolSize=3
+
+# 当连接池中的连接耗尽的时候c3p0一次同时获取的连接数。Default: 3
+c3p0.acquireIncrement=3
+
+#定义在从数据库获取新连接失败后重复尝试的次数。Default: 30
+c3p0.acquireRetryAttempts=60
+
+# 两次连接中间隔时间，单位毫秒。Default: 1000
+c3p0.acquireRetryDelay=1000
+
+# 连接关闭时默认将所有未提交的操作回滚
+c3p0.autoCommitOnClose=false
+
+# 当连接池用完时客户端调用getConnection()后等待获取新连接的时间，超时后将抛出SQLException,如设为0则无限
+c3p0.checkoutTimeout=3000
+
+# 每120秒检查所有连接池中的空闲连接。Default: 0
+c3p0.idleConnectionTestPeriod=120
+
+# 最大空闲时间,60秒内未使用则连接被丢弃。若为0则永不丢弃。Default: 0 
+c3p0.maxIdleTime=600
+
+# 如果设为true那么在取得连接的同时将校验连接的有效性。Default: false
+c3p0.testConnectionOnCheckin=false
+
+# 如果maxStatements与maxStatementsPerConnection均为0，则缓存被关闭。Default: 0
+c3p0.maxStatements=8
+
+# maxStatementsPerConnection定义了连接池内单个连接所拥有的最大缓存statements数。Default: 0
+c3p0.maxStatementsPerConnection=5
+
+# c3p0将建一张名为Test的空表，并使用其自带的查询语句进行测试。如果定义了这个参数那么属性preferredTestQuery将被忽略。Default: null-->
+c3p0.automaticTestTable=TEST
+
+# 获取连接失败将会引起所有等待连接池来获取连接的线程抛出异常。但是数据源仍有效保留，并在下次调用getConnection()的时候继续尝试获取连接。
+
+# 如果设为true，那么在尝试获取连接失败后该数据源将申明已断开并永久关闭。Default: false-->
+c3p0.breakAfterAcquireFailure=false
+
+# c3p0是异步操作的，缓慢的JDBC操作通过帮助进程完成。扩展这些操作可以有效的提升性能通过多线程实现多个操作同时被执行。Default: 3
+c3p0.numHelperThreads=3
+```
+
+
+
+
+
+##### 博文看法：
+
+使用连接池的时候并不是在代码中不用获取/释放数据库连接，而是在代码中向连接池申请/释放连接，对于代码而言，可以把连接池看成数据库。
+
+换句话说，连接池就是数据库的代理，之所以要使用这个代理是因为直接向数据库申请/释放连接是要降低性能的：如果每一次数据访问请求都必须经历建立数据库连接、打开数据库、存取数据和关闭数据库连接等步骤，而连接并打开数据库是一件既消耗资源又费时的工作，那么频繁发生这种数据库操作时，系统的性能必然会急剧下降。
+
+连接池的作用是自己维护数据库连接，数据库连接池的主要操作如下：
+　　（1）建立数据库连接池对象（服务器启动）。
+　　（2）按照事先指定的参数创建初始数量的数据库连接（即：空闲连接数）。
+　　（3）对于一个数据库访问请求，直接从连接池中得到一个连接。如果数据库连接池对象中没有空闲的连接，且连接数没有达到最大（即：最大活跃连接数），创建一个新的数据库连接。
+　　（4）存取数据库。
+　　（5）关闭数据库，释放所有数据库连接（此时的关闭数据库连接，并非真正关闭，而是将其放入空闲队列中。如实际空闲连接数大于初始空闲连接数则释放连接）。
+　　（6）释放数据库连接池对象（服务器停止、维护期间，释放数据库连接池对象，并释放所有连接）。
