增加了本地仓库得配置方法，本地jar包配置方法

--- a/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
+++ b/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
@@ -31,6 +31,10 @@ net start mysql
 
 ```sql
 -- 得空来补充，现在版本变更挺大，对于不同的linux发行版也会有不同的处理方式
+0,zEwn3a%SpN
+-- 1.启动要初始化
+-- 2.启动要指定目录和用户
+-- 3.并不需要安装这一步
 
 
 ```
