添加部分gradle编译说明和spring源码构建记录

--- a/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
+++ b/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
@@ -14,14 +14,14 @@ flush privileges;
 #### Windows下安装
 
 ```mysql
-// 安装服务并制定配置文件
+-- 安装服务并制定配置文件
 mysqld install mysql --defaults-file=d:\datacore\xxxxxxx
-//初始化基础文件
+-- 初始化基础文件
 mysqld --intialize
-//启动服务
+-- 启动服务
 net start mysql
-//修改密码
-
+-- 修改密码
+-- https://www.cnblogs.com/mrhonest/p/10881646.html
 
 ```
 
