增加了mysql在linux服务器上部署的详细记录与说明

--- a/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
+++ b/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
@@ -29,12 +29,43 @@ net start mysql
 
 ## Linux下安装
 
+* 准备工作
+
 ```sql
+-- 首先需要一个干净的系统环境，现在云服务器自己安装了各自支持的发行版，需要将其卸载干净，才能不影响自己安装的mysql
+-- centos下，rpm查看有哪些安装过的软件
+rpm -qa | grep mariadb
+
+-- 强制卸载部分不需要的程序
+rpm -e --nodeps mariadb-libs-5.5.37-1.el7_0.x86_64
+
+--当原本版本的程序卸载干净后，可以开始安装自己的mysql了
+```
+
+
+
+* 安装与启动
+
+```sql
+
 -- 得空来补充，现在版本变更挺大，对于不同的linux发行版也会有不同的处理方式
-0,zEwn3a%SpN
+!,lcAUyfa8kq
 -- 1.启动要初始化
--- 2.启动要指定目录和用户
+./bin/mysqld --initialize --basedir=/home/fogcoding/mysql-5.7.16/ --datadir=/home/fogcoding/mysql-5.7.16/data/ --user=root
+
+-- 2.指定配置文件，用户启动
+./bin/mysqld --defaults-file=/home/fogcoding/mysql-5.7.16/fog.cnf --user=root
+
 -- 3.并不需要安装这一步
+
+-- 4.修改mysql用户密码
+alter user root@localhost identified by '';
+flush privileges;
+
+-- 5.配置远程权限
+grant all on *.* to root@'%' identified by '123456';
+flush privileges;
+
 
 
 ```
