--- a/md_file/博客文章/常用组件/maven/典型问题.md
+++ b/md_file/博客文章/常用组件/maven/典型问题.md
@@ -6,10 +6,6 @@
 
 #### shanpshot版本发布
 
-
-
-
-
 #### 快照版本与发布版本两个镜像，如何使他们各自生效？
 
 ```xml
@@ -112,6 +108,21 @@ mvn package -P profile_id
 ```
 
 
+
+#### 明明服务器有JAR包，但就是显示无法拉取
+
+```xml
+<!-- maven默认不主动去拉取SNAPSHOT版本的jar包，所以需要在pom文件中声明更新快照版本包  -->
+<repositories>
+    <repository>
+        <id>fog</id>
+        <url>http://localhost:8081/repository/test/</url>
+        <snapshots>
+            <updatePolicy>always</updatePolicy>
+        </snapshots>
+    </repository>
+</repositories>
+```
 
 
 
