增加mysql优化文档内容

--- a/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
+++ b/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
@@ -17,10 +17,11 @@ flush privileges;
 -- 安装服务并制定配置文件
 mysqld install mysql --defaults-file=d:\datacore\xxxxxxx
 -- 初始化基础文件
-mysqld --intialize
+mysqld --initialize
 -- 启动服务
 net start mysql
 -- 修改密码
+SET PASSWORD FOR 'root'@'localhost' = PASSWORD('123456');
 -- https://www.cnblogs.com/mrhonest/p/10881646.html
 
 ```
