添加近期笔记和git查看历史内容的操作方法

--- a/md_file/博客文章/常用组件/maven/典型问题.md
+++ b/md_file/博客文章/常用组件/maven/典型问题.md
@@ -4,7 +4,7 @@
 
 
 
-#### shanpshot版本发布
+#### release/snapshot版本发布到私服
 
 #### 快照版本与发布版本两个镜像，如何使他们各自生效？
 
@@ -53,6 +53,7 @@
 
     </repositories>
 
+    <!-- 这里是配置用来使用deploy命令来发布到私服的配置 -->
     <distributionManagement>
         <repository>
             <id>hj_deploy</id>
