近期笔记更新同步

--- a/md_file/博客文章/Linux部分/磁盘空间找不到.md
+++ b/md_file/博客文章/Linux部分/磁盘空间找不到.md
@@ -19,3 +19,27 @@ kill -9 进程号
 再df -h就没问题了，以下是公司大拿给出来的解释:
 
 当我们使用rm在linux上删除了大文件，但是如果有进程打开了这个大文件，却没有关闭这个文件的句柄，那么linux内核还是不会释放这个文件的磁盘空间
+
+
+
+
+
+## 清除buffer/cache缓存内容
+
+- sync
+
+通过修改proc系统的drop_caches清理free的cache
+
+- echo 3 > /proc/sys/vm/drop_caches
+
+
+
+```shell
+echo 1 > /proc/sys/vm/drop_caches:表示清除pagecache。
+echo 2 > /proc/sys/vm/drop_caches:表示清除回收slab分配器中的对象（包括目录项缓存和inode缓存）。slab分配器是内核中管理内存的一种机制，其中很多缓存数据实现都是用的pagecache。
+echo 3 > /proc/sys/vm/drop_caches:表示清除pagecache和slab分配器中的缓存对象。
+```
+
+可以调用crond定时任务：每10分钟执行一次
+
+- */10 * * * * sync;echo 3 > /proc/sys/vm/drop_caches;   
