同步近期更新

--- a/md_file/博客文章/后端部分/数据库/Oracle/运维记录文档/操作语句记录.md
+++ b/md_file/博客文章/后端部分/数据库/Oracle/运维记录文档/操作语句记录.md
@@ -53,6 +53,9 @@ AUTOEXTEND ON NEXT 5M MAXSIZE 100M;
 ALTER DATABASE DATAFILE 'D:\ORACLE\PRODUCT\10.2.0\ORADATA\EDWTEST\APP02.DBF'  
 RESIZE 100M; 
 
+-- 备份一张表
+create table myTable_tmpe as select * from myTable ;
+
 ```
 
 
