同步最近更新

--- a/md_file/博客文章/后端部分/数据库/Oracle/运维记录文档/操作语句记录.md
+++ b/md_file/博客文章/后端部分/数据库/Oracle/运维记录文档/操作语句记录.md
@@ -70,3 +70,18 @@ sqlplus sys/fogcoding@192.168.1.107:1521 as sysdba
 
 
 
+#### ORACLE分页
+
+```sql
+-- 只查询最前面的10条记录
+select * from table where rownum < 10;
+
+-- 中间阶段分页
+select 
+  *
+from ( select a.rownum as rowid,c1,c2,... from table_name a) b
+  where b.rowid < 100 and b.rowid > 90;
+```
+
+
+
