--- a/md_file/练手小项目.md
+++ b/md_file/练手小项目.md
@@ -13,8 +13,6 @@
 
 
 
-
-
 #### 前端框架练手项目
 
 ---
@@ -39,3 +37,52 @@
 
 * 大学人员课程事物管理系统
 * spring的DI和AOP运用实例
+
+
+
+
+
+### 后期实用
+
+1.SQL执行器和查数器
+
+2.shell执行器
+
+3.sftp工具
+
+4.前端自定义表格功能，配合多条件查询，时间查询，模糊查询
+
+5.用户，权限，前端框架基础
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
