添加docker无法登录harbor私库的问题

--- a/md_file/博客文章/后端部分/数据库/Oracle/运维记录文档/操作语句记录.md
+++ b/md_file/博客文章/后端部分/数据库/Oracle/运维记录文档/操作语句记录.md
@@ -85,3 +85,20 @@ from ( select a.rownum as rowid,c1,c2,... from table_name a) b
 
 
 
+#### ORACLE更新数据出错
+
+```sql
+数据库按照你的条件查询有多个重复的数据。
+
+UPDATE "SYS_ROLE" A
+SET A ."DEPT_ID" = (
+    SELECT
+        c."id"
+    FROM
+        "his_department_info" c
+    WHERE
+        c."dept_name" = A ."ROLE_NAME"
+
+如果以上sql语句报single-row subquery returns more than one row的错误，说明 c表”dept_name” 和A 表.”ROLE_NAME” 的这两个字段 数据重复
+```
+
