近期文档更新-20230424

--- a/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
+++ b/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
@@ -60,15 +60,49 @@ rpm -e --nodeps mariadb-libs-5.5.37-1.el7_0.x86_64
 -- 3.并不需要安装这一步
 
 -- 4.修改mysql用户密码
-alter user root@localhost identified by '';
+alter user root@localhost identified by '123456';
 flush privileges;
 
 -- 5.配置远程权限
-grant all on *.* to root@'%' identified by '123456';
+grant all on *.* to monitor@% identified by 'monitor';
 flush privileges;
 
 
+-- ####################################################################
+-- 6.   8.0 版本以上用
 
+-- root 没有system_user权限要先加上
+grant system_user on *.* to 'root';
+
+新增用户
+错误方式
+
+mysql> grant all on admin.* TO admin@127.0.0.1 identified by '123456';
+ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'identified by '123456'' at line 1
+正确方式
+需要先创建用户，再赋权
+
+mysql> create user 'zabbix'@'%' identified by 'zabbix';
+Query OK, 0 rows affected (0.01 sec)
+mysql> grant all on zabbix.* to 'zabbix'@'%' ;
+Query OK, 0 rows affected (0.01 sec)
+mysql> flush privileges;
+Query OK, 0 rows affected (0.01 sec)
+修改加密规则
+Mysql8.0之前的版本中，加密规则是mysql_native_password，而在Mysql8之后,加密规则是caching_sha2_password
+当使用低版本客户端登陆时会报错，因此有两种解决方式：1、升级客户端；2、更改Mysql加密方式
+
+mysql> ALTER USER 'root'@'%' IDENTIFIED WITH mysql_native_password BY '123456';
+mysql> ALTER USER monitor IDENTIFIED WITH mysql_native_password BY 'monitor' PASSWORD EXPIRE NEVER;
+mysql> ALTER USER zabbix IDENTIFIED WITH mysql_native_password BY 'zabbix' PASSWORD EXPIRE NEVER;
+
+Query OK, 0 rows affected (0.01 sec)
+mysql> flush privileges;
+Query OK, 0 rows affected (0.01 sec)
+
+
+
+-- proxy端在安装时，只需要导入schema.sql，而不需要导入images.sql和data.sql。
 ```
 
 
