近期更新提交

--- a/md_file/博客文章/后端部分/数据库/Oracle/运维记录文档/操作语句记录.md
+++ b/md_file/博客文章/后端部分/数据库/Oracle/运维记录文档/操作语句记录.md
@@ -102,3 +102,18 @@ SET A ."DEPT_ID" = (
 如果以上sql语句报single-row subquery returns more than one row的错误，说明 c表”dept_name” 和A 表.”ROLE_NAME” 的这两个字段 数据重复
 ```
 
+
+
+#### 归档日志文件过分零散后处理
+
+```shell
+
+cd ~~~/adump/
+
+find ./ -name "*.aud" |xargs rm -rf;
+
+SECfe29815ff96699c7c27a44f09968ab76e09a3baaededc56056db3487cee4082c
+https://oapi.dingtalk.com/robot/send?access_token=2e71cffd3007eb19f1bb4120f9bd0c04ef9fcd45c93fdd0f7c3833ac00e53bb5
+
+```
+
