同步近期新增

--- a/md_file/博客文章/常用组件/maven/典型问题.md
+++ b/md_file/博客文章/常用组件/maven/典型问题.md
@@ -127,5 +127,67 @@ mvn package -P profile_id
 
 
 
+#### 进行父子多模块工程发布时如果设置版本
+
+```xml
+方案一：mvn -Denv.project.version=1.0-env
+注： env.project.version为自定参数变量，env为dev或者test
+
+    <groupId>org.example</groupId>
+    <artifactId>demo-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>${env.project.version}</version>
+
+    <properties>
+        <env.project.version>1.0-SNAPSHOT</env.project.version>
+    </properties>
+
+命令：
+mvn clean package -Denv.project.version=1.0-dev -DskipTests
+
+mvn clean deploy-Denv.project.version=1.0-dev -DskipTests
+
+
+方案二 maven的profile+自定参数变量
+<properties>
+  <env.project.version>1.0-SNAPSHOT</env.project.version>
+</properties>
+<profiles>
+    <profile>
+        <id>dev</id>
+        <properties>
+            <env.project.version>1.0-dev</env.project.version>
+        </properties>
+        <activation>
+            <activeByDefault>true</activeByDefault>
+        </activation>
+    </profile>
+    <profile>
+        <id>test</id>
+        <properties>
+            <env.project.version>1.0-test</env.project.version>
+        </properties>
+    </profile>
+</profiles>
+
+mvn clean package -Ptest -DskipTests
+
+方案三（推荐） mvn versions:set -DnewVersion=1.0-dev
+注： 使用该命令，项目无需做任何变动。
+
+直接执行命令
+
+mvn versions:set -DnewVersion=1.0-dev
+如果要发布到私仓，此时要分两次命令执行，命令如下
+
+mvn versions:set -DnewVersion=1.0-dev
+mvn clean deploy -DskipTests
+
+博文引用：https://www.cnblogs.com/linyb-geek/p/14187404.html
+
+```
+
+
+
 
 
