--- a/md_file/博客文章/配置管理/zabbix/安装记录.md
+++ b/md_file/博客文章/配置管理/zabbix/安装记录.md
@@ -10,3 +10,16 @@
 3.安装最核心的东西是配置php-fm，这个是前端php执行各项程序的核心进程，当能打开了页面以后，就可以直接前端显式操作了
 ```
 
+
+
+
+
+安装agent的时候，出错说pcre，其实只要装一下pcre-devel 
+
+
+
+当yum 命令失效时，尝试一下rpm --rebuilddb
+
+
+
+注册一个机器注册不上去，其实是hosts里面有记录，导致无法自动注册
