--- a/md_file/博客文章/配置管理/jenkins/从节点无法获取环境变量配置.md
+++ b/md_file/博客文章/配置管理/jenkins/从节点无法获取环境变量配置.md
@@ -4,6 +4,12 @@ jenkins 配置slave节点时，读取环境变量的位置是 ~/.bashrc
 
 如果配到 /etc/profile 是读取不到的
 
+另一种方式是直接在环境变量里直接通过PATH=$PATH:xxxx的方式声明环境变量
+
+注：如果权限不对，也会一直提示当前环境变量不存在
+
+
+
 2、关于连接方式
 
 启动slave节点选择SSH通过账号登录时，请选择：Non verifying Verification Strategy
