--- a/md_file/博客文章/配置管理/zabbix/安装记录.md
+++ b/md_file/博客文章/配置管理/zabbix/安装记录.md
@@ -23,3 +23,29 @@
 
 
 注册一个机器注册不上去，其实是hosts里面有记录，导致无法自动注册
+
+
+
+#### 解决 Nginx 与 FastCGI 通信错误 "Primary script unknown"
+
+```properties
+## Nginx 用户与 Php-fpm 用户不一致
+## 如果以上配置都为正确的情况下，将 nginx.conf 中的 user 用户配置与 www.conf 用户配置设置为统一的用户与用户组。
+在 nginx.conf 中
+
+http {
+    user  nginx nginx;
+    worker_processes  8;
+    ...
+}
+
+###
+在 Php-fpm 的 www.conf 中
+
+user = nginx
+group = nginx
+
+### 如果没有 nginx 用户，创建这个用户
+useradd nginx
+```
+
