新增近期编辑记录

--- a/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
+++ b/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
@@ -50,7 +50,7 @@ rpm -e --nodeps mariadb-libs-5.5.37-1.el7_0.x86_64
 ```sql
 
 -- 得空来补充，现在版本变更挺大，对于不同的linux发行版也会有不同的处理方式
-!,lcAUyfa8kq
+Zf-Qcjq%E2Lw
 -- 1.启动要初始化
 ./bin/mysqld --initialize --basedir=/home/fogcoding/mysql-5.7.16/ --datadir=/home/fogcoding/mysql-5.7.16/data/ --user=root
 
@@ -65,6 +65,8 @@ flush privileges;
 
 -- 5.配置远程权限
 grant all on *.* to monitor@% identified by 'monitor';
+grant all on *.* to chenzhi@% identified by 'chenzhi3306';
+
 flush privileges;
 
 
