新增近期改动

--- a/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
+++ b/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
@@ -15,7 +15,7 @@ flush privileges;
 
 ```mysql
 -- 安装服务并制定配置文件
-mysqld install mysql --defaults-file=d:\datacore\xxxxxxx
+mysqld install mysql --default-files=d:\datacore\xxxxxxx
 -- 初始化基础文件
 mysqld --initialize
 -- 启动服务
@@ -93,6 +93,17 @@ Query OK, 0 rows affected (0.01 sec)
 修改加密规则
 Mysql8.0之前的版本中，加密规则是mysql_native_password，而在Mysql8之后,加密规则是caching_sha2_password
 当使用低版本客户端登陆时会报错，因此有两种解决方式：1、升级客户端；2、更改Mysql加密方式
+
+## [mysqld]  配置 mysql_native_password=ON
+--修改密码验证方式
+alter user 'root'@'localhost' identified with mysql_native_password;
+--修改实际密码
+alter user 'root'@'localhost' identified by '123456';
+-- 修改root远程连接权限
+update user set host='%' where user='root' and host='localhost';
+-- 刷新权限
+flush privileges;
+
 
 mysql> ALTER USER 'root'@'%' IDENTIFIED WITH mysql_native_password BY '123456';
 mysql> ALTER USER monitor IDENTIFIED WITH mysql_native_password BY 'monitor' PASSWORD EXPIRE NEVER;
