更新新版mysql8.0+密码重置操作

--- a/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
+++ b/md_file/博客文章/后端部分/数据库/Mysql/初始化备忘录.md
@@ -104,6 +104,14 @@ update user set host='%' where user='root' and host='localhost';
 -- 刷新权限
 flush privileges;
 
+-- 若是忘记了root密码，重置root密码
+-- [mysqld]    skip-grant-tables 
+-- 直接将密码改成空，就可以mysql命令连接时回车直接进入，再改密码
+-- 当执行命令时，提示skip-grant-tables,则执行flush privileges一遍，即可再次执行语句成功
+UPDATE mysql.user SET authentication_string = '' WHERE User = 'root' and  Host = 'localhost';
+FLUSH PRIVILEGES;
+
+
 
 mysql> ALTER USER 'root'@'%' IDENTIFIED WITH mysql_native_password BY '123456';
 mysql> ALTER USER monitor IDENTIFIED WITH mysql_native_password BY 'monitor' PASSWORD EXPIRE NEVER;
@@ -117,8 +125,5 @@ Query OK, 0 rows affected (0.01 sec)
 
 -- proxy端在安装时，只需要导入schema.sql，而不需要导入images.sql和data.sql。
 ```
-
-
-
 
 
