近期更新提交

--- a/md_file/博客文章/Linux部分/shell脚本系统学习/1.变量的定义与引用.md
+++ b/md_file/博客文章/Linux部分/shell脚本系统学习/1.变量的定义与引用.md
@@ -57,6 +57,16 @@ unset variable_name
 
 ```shell
 ## shell中的数组
+## 作为数组处理
+arr=($(命令内容，可以作为数组))
+## 作为字符串处理
+arr=$(命令内容，可以作为数组)
+
+## 另外一个命令可以直接作为数组存起来用
+readarray -t arr_name < file
+## 引用方式为
+${arr_name[index]}
+
 
 
 ## shell中的map
